--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <section id="clients">
         <h2>🤝 Our Clients</h2>
-        <img src="img/pic.png" alt="">
+        <img src="pic.png" alt="">
         <div class="clients-logos">
             
     </section>
