--- a/contect us.html
+++ b/contect us.html
@@ -40,8 +40,14 @@
             <a href="https://wa.me/+201142964340" target="_blank"><img src="WhatsApp-icone.jpg" width="50" ></a>
             <h2>Contact via WeChat</h2>
             <h3>+201142964340 <img src="images (1).png" width="40"></h3>
-            
         </div>
+         <div class="item1">
+            <h2>linkedin profile</h2>
+            <h3>Follow us on LinkedIn to stay updated with our latest news and collaboration opportunities</h3>
+             <a href="https://www.linkedin.com/company/tradenest-global/?viewAsMember=true" target="_blank"><img src="images.png" width="50" ></a>
+
+        </div>
+
 
 
 
